feat: Content-Type header
fix: Larger text on index.html CTA

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
                 <p>
                     You know the drill.
                     <br>
-                    5 letters. 6 guesses.
+                    5 letters, 6 guesses.
                     <br>
                     Can you beat your friends?
                 </p>
@@ -92,7 +92,7 @@
             .main {
                 height: 100%;
                 padding: 32px;
-                font-size: 24px;
+                font-size: 36px;
             }
             .main p {
                 font-weight: 700;
