--- a/public/game.html
+++ b/public/game.html
@@ -7,17 +7,21 @@
 
     <title>Wordle Together</title>
 
-    <link rel='icon' type='image/png' href='/favicon.png'>
     <link rel='stylesheet' href='/global.css'>
     <link rel='stylesheet' href='/build/bundle.css' defer>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"></noscript>
+    <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined">
+    </noscript>
     <link rel="preload" href="/shake-horizontal.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="/shake-horizontal.css"></noscript>
+    <noscript>
+        <link rel="stylesheet" href="/shake-horizontal.css">
+    </noscript>
 
 
     <script defer src='/build/bundle.js'></script>
@@ -32,8 +36,8 @@
     <meta property="og:url" content="https://wordletogether.com/">
     <meta property="og:title" content="Wordle Together — Multiplayer Wordle">
     <meta property="og:description" content="Wordle Together: Play wordle with your friends! Can you win?">
-    <meta property="og:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <!-- <meta property="og:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
     <meta content="#2e7d32" data-react-helmet="true" name="theme-color" />
 
     <!-- Twitter -->
@@ -41,8 +45,16 @@
     <meta property="twitter:url" content="https://wordletogether.com/">
     <meta property="twitter:title" content="Wordle Together — Multiplayer Wordle">
     <meta property="twitter:description" content="Wordle Together: Play wordle with your friends! Can you win?">
-    <meta property="twitter:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <!-- <meta property="twitter:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6aaa64">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
