feat: PWA service worker, name on index
feat: Add Timer to header in game

--- a/public/game.html
+++ b/public/game.html
@@ -25,6 +25,7 @@
 
 
     <script defer src='/build/bundle.js'></script>
+    <script defer src='/register-sw.js'></script>
 
     <!-- Primary Meta Tags -->
     <title>Wordle Together</title>
