feat: Added Social Image
fix: Remove duplicate tags and add theme color

chore: Capitalize Wordle

--- a/public/game.html
+++ b/public/game.html
@@ -28,26 +28,23 @@
     <script defer src='/register-sw.js'></script>
 
     <!-- Primary Meta Tags -->
-    <title>Wordle Together</title>
     <meta name="title" content="Wordle Together — Multiplayer Wordle">
-    <meta name="description" content="Wordle Together: Play wordle with your friends! Can you win?">
+    <meta name="description" content="Wordle Together: Play Wordle with your friends! Can you win?">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://wordletogether.com/">
     <meta property="og:title" content="Wordle Together — Multiplayer Wordle">
-    <meta property="og:description" content="Wordle Together: Play wordle with your friends! Can you win?">
-    <!-- <meta property="og:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
-    <meta content="#2e7d32" data-react-helmet="true" name="theme-color" />
+    <meta property="og:description" content="Wordle Together: Play Wordle with your friends! Can you win?">
+    <meta property="og:image" content="https://wordletogether.com/social.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://wordletogether.com/">
     <meta property="twitter:title" content="Wordle Together — Multiplayer Wordle">
-    <meta property="twitter:description" content="Wordle Together: Play wordle with your friends! Can you win?">
-    <!-- <meta property="twitter:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
+    <meta property="twitter:description" content="Wordle Together: Play Wordle with your friends! Can you win?">
+    <meta property="twitter:image" content="https://wordletogether.com/social.png">
+
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -55,7 +52,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6aaa64">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#6aaa64">
 </head>
 
 <body>
