feat: Game start sound
feat: Add social icon svg, github -> twitter link

fix: Don't log words

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
             <a class="button" href="/game/">Play now</a>
         </div>
         <div class="right">
-            <div>Made by&nbsp;<a href="https://github.com/0xMihir">Mihir Patil</a></div>
+            <div>Made by&nbsp;<a href="https://twitter.com/intent/follow?user_id=1462912680205770757">Mihir Patil</a></div>
         </div>
     </div>
 
