feat: Room Count
feat: Matchmaking confirmation

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,14 @@
             <a class="button" href="/game/">Play now</a>
         </div>
         <div class="right">
-            <div>Made by&nbsp;<a href="https://twitter.com/intent/follow?user_id=1462912680205770757">Mihir Patil</a></div>
+            <a href="https://twitter.com/0xMihirPatil?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+                data-show-count="false">Follow @0xMihirPatil
+                <script async defer src="https://platform.twitter.com/widgets.js" charset="utf-8" ></script>
+            </a>
+            <a class="github-button" href="https://github.com/0xMihir" aria-label="Follow @0xMihir on GitHub">Follow
+                @0xMihir
+                <script async defer src="https://buttons.github.io/buttons.js"></script>
+            </a>
         </div>
     </div>
 
@@ -97,6 +104,7 @@
             margin-left: auto;
             flex: 1;
             text-align: right;
+            gap: 4px;
         }
 
         .middle {
